--- a/src/components/PageFooter.module.css
+++ b/src/components/PageFooter.module.css
@@ -2,7 +2,7 @@
 	display: grid;
 	grid-template-columns: 1fr 300px 1fr;
 	grid-template-rows: auto;
-	padding: 0 8px;
+	padding: 0 var(--content-padding);
 	align-items: flex-end;
 }
 .sectionNavigation ul {
