--- a/src/components/PageWrapper.module.css
+++ b/src/components/PageWrapper.module.css
@@ -17,6 +17,11 @@
 	mask-image: url(../images/bg.svg);
 	opacity: 0.2;
 }
+.flex {
+	display: flex;
+	flex-direction: column;
+	flex: 1;
+}
 .main {
 	display: flex;
 	flex-direction: row;
@@ -25,5 +30,5 @@
 .main > div {
 	flex: 1;
 	width: 100%;
-	padding: 0 8px;
+	padding: 0 var(--content-padding);
 }
