--- a/src/components/StyleWrapper.module.css
+++ b/src/components/StyleWrapper.module.css
@@ -69,5 +69,8 @@
 	--outer-stop-line: var(--text-color);
 }
 .heightShort > div {
-	height: 24px;
+	height: 48px;
+	display: flex;
+	align-items: end;
+	padding: 0 var(--content-padding);
 }
