--- a/src/theme.module.css
+++ b/src/theme.module.css
@@ -1,5 +1,7 @@
 :root {
 	color-scheme: light dark;
+
+	--content-padding: 8px;
 }
 :root, .themeLight {
 	--text-color: black;
